# Desafios

./: .gitignore  main.py  pyproject.toml
aula01/: exec01.py
aula02/: Exercicios.md  aula2.py  exe04.py  exe05.py  exe_booleans_16.py  exe_booleans_17.py  exe_booleans_18.py  exe_booleans_19.py  exe_booleans_20.py  exe_float_06.py  exe_float_07.py  exe_float_08.py  exe_float_09.py  exe_float_10.py  exe_inteiros_01.py  exe_inteiros_02.py  exe_inteiros_03.py  exe_strings_11.py  exe_strings_12.py  exe_strings_13.py  exe_strings_14.py  exe_strings_15.py  exe_try_except_if_21.py  exe_try_except_if_22.py  exe_try_except_if_23.py  exe_try_except_if_24.py  exe_try_except_if_25.py
aula03/: exe_01_ctrl_fluxos.py  exe_02_ctrl_fluxos.py  exe_03_ctrl_fluxos.py  exe_04_ctrl_fluxos.py  exe_05_ctrl_fluxos.py  exe_06_ctrl_fluxos.py  exe_07_ctrl_fluxos.py  exe_08_ctrl_fluxos.py  exe_09_ctrl_fluxos.py  exe_10_ctrl_fluxos.py  exe_11_ctrl_fluxos.py  exe_12_ctrl_fluxos.py  exe_13_ctrl_fluxos.py  exe_14_ctrl_fluxos.py  (+1 more)
aula05/One-Billion-Row-Challenge-Python/: pyproject.toml
aula05/One-Billion-Row-Challenge-Python/.gitt/: config  index  packed-refs
aula05/One-Billion-Row-Challenge-Python/.gitt/logs/refs/remotes/origin/: HEAD
aula05/One-Billion-Row-Challenge-Python/.gitt/objects/pack/: pack-2d7b11fed0c268473330820055889d15dd905e82.idx  pack-2d7b11fed0c268473330820055889d15dd905e82.pack  pack-2d7b11fed0c268473330820055889d15dd905e82.rev
aula05/One-Billion-Row-Challenge-Python/.gitt/refs/heads/: main
aula05/One-Billion-Row-Challenge-Python/src/: using_pandas.py  using_polars.py
(+35 files in other folders)
